fix(core/group): fixed shift on overflow text

--- a/packages/core/src/components/group/group.scss
+++ b/packages/core/src/components/group/group.scss
@@ -100,6 +100,7 @@
     flex-grow: 1;
     padding: 0.5rem;
     padding-left: 0;
+    width: 100%;
 
     .group-header-props-container {
       width: 100%;
